--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-config-lagou",
-  "version": "0.0.1",
-  "description": "",
+  "version": "1.0.0",
+  "description": "As mentioned above, the following is introduce of **rules**:",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
